# Forecast.io

./: .gitignore  README.md  cdk.json
api/: .gitignore  Makefile  README.md
api/model_endpoint/docker/: Dockerfile
api/scripts/: setup.sh
forecast_api/: app.py  pyproject.toml  utils.py
forecast_api/forecast_api/: utils.py
forecast_api/forecast_api/forecasting/: __init__.py  dummy.py  linear_reg.py  perceptron.py
forecast_api/models/: registery.json  utils_model.py
forecast_api/tests/: causality.py  stationnarity.py
forecast_api/training/: backtesting.py  config.yaml  config_template.yaml  data.py  main.py  utils.py
forecast_api/training/DATA/: AUDUSD_H1.csv  EURCHF_H1.csv  EURGBP_H1.csv  EURJPY_H1.csv  EURUSD_H1.csv  GBPUSD_H1.csv  NZDUSD_H1.csv  USDCAD_H1.csv  USDCHF_H1.csv  USDJPY_H1.csv
forecast_api/training/datasets/: mt5_dataset.py
forecast_api/training/scripts/: download_data.yaml  get_data.py
forecast_api/utils/: __init__.py  dataloader.py  request_bodys.py  timestamp.py
training/: README.md  config_template.yaml  data.py  main.py  optim.py  utils.py
training/src/datasets/: __init__.py
training/src/models/: __init__.py  dummy.py  torch_model.py
web_app/: api_call.py  app.py  pages.json  pyproject.toml
web_app/assets/: 01-background.css  test.css  timeline.css
web_app/pages/: analytics.py  dashboard.py  forecasting.py  home.py  utils.py
web_app/pages/analytics/: basics.py  causal_relationships.py
web_app/pages/utils/: __init__.py  api_call.py  forecasting.py  meta.py  pages.py  timestamp.py
(+2 files in other folders)
