[tool.poetry]
name = "forecast-api"
version = "0.1.0"
description = ""
authors = ["Etienne <etienne.micheladj@gmail.com>"]
readme = "README.md"
packages = [{include = "forecast_api"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.111.0"
torchinfo = "^1.8.0"
torch = "^2.3.0"
torchvision = "^0.18.0"
torchaudio = "^2.3.0"
wandb = "^0.17.0"
pandas = "^2.2.2"
tqdm = "^4.66.4"
scipy = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
